--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prisma": "^5.15.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.0"
+    "@prisma/client": "^5.15.0",
+    "slugify": "^1.6.6"
   }
 }
